added search, browse base components

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,1 +1,6 @@
-
+.mainContainer{
+    height: 100vh;
+    background-image: url(/images/bg.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
