--- a/src/components/Browse/Browse.css
+++ b/src/components/Browse/Browse.css
@@ -1,6 +1,17 @@
-#dropDown {
+#browseDropDowns{
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
+}
+
+.browseForms {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 0 2vw;
+}
+h5 {
+    margin-right: 1vw;
+    padding-top: 1vh;
 }
