--- a/src/components/Browse/Browse.css
+++ b/src/components/Browse/Browse.css
@@ -11,7 +11,15 @@
     align-items: center;
     padding: 0 2vw;
 }
-h5 {
+#browseDecks h5 {
     margin-right: 1vw;
     padding-top: 1vh;
+}
+
+.browseDecks{
+    margin-top: 3vh;
+}
+
+#browseDecks h4 {
+    margin-bottom: 3vh;
 }
