--- a/src/components/Game/Game.css
+++ b/src/components/Game/Game.css
@@ -8,3 +8,15 @@
 #gameContainer {
   background-color: rgb(90, 90, 90);
 }
+
+#gameHeader{
+background-image: url('/images/gamebg.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+#gameSubHeader{
+    background-color: rgba(7, 29, 9, .6);
+    padding: 1rem;
+    color: white;
+}
